# eva

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  thumbv7em-eva-eabihf.json  x86_64-evalinux-gnu.json
.cargo/: config.toml
benches/: run_bench.py  run_size.py
benches/.cargo/: config.toml
benches/condvar/: Cargo.toml
benches/condvar/src/: main.rs
benches/irq-latency/: Cargo.toml
benches/irq-latency/src/: main.rs
benches/mutex-lock/: Cargo.toml
benches/mutex-lock/src/: main.rs
benches/mutex-uncont/: Cargo.toml
benches/mutex-uncont/src/: main.rs
benches/mutex-unlock/: Cargo.toml
benches/mutex-unlock/src/: main.rs
benches/wake-from-irq/: Cargo.toml
benches/wake-from-irq/src/: main.rs
benches/yield/: Cargo.toml
benches/yield/src/: main.rs
docs/: mad-ramblings.md
eva-abi/: Cargo.toml  build.rs  cbindgen.toml  gen.sh
eva-abi/include/eva/: abi.h  abi_manual.h  common.h
eva-abi/src/: lib.rs
eva-alloc/: Cargo.toml
eva-alloc/src/: lib.rs
eva-bsp/: Cargo.toml  build.rs
eva-bsp-linux/: Cargo.toml
eva-bsp-linux/src/: lib.rs
eva-bsp-stm32f767/: Cargo.toml  build.rs
eva-bsp-stm32f767/link/: exceptions.x
eva-bsp-stm32f767/src/: lib.rs
eva-bsp/link/: link.x
eva-bsp/linux/: Cargo.toml
eva-bsp/linux/link/: link.x
eva-bsp/linux/src/: lib.rs
eva-bsp/src/: lib.rs
eva-bsp/stm32f767/: Cargo.toml
eva-bsp/stm32f767/link/: exceptions.x  link.x
eva-bsp/stm32f767/src/: gpio.rs  lib.rs
eva-build/: Cargo.toml
eva-build/src/: lib.rs
eva-config/: Cargo.toml  build.rs
eva-kernel/: Cargo.toml
eva-kernel/src/: allocator.rs  c_abi.rs  io.rs  kmain.rs  kprint.rs  lib.rs  panic.rs  port.rs  portability.rs  time.rs
eva-kernel/src/rt/: idle.rs  mod.rs  sched_queue.rs  thread.rs  thread_list.rs  time.rs  tls.rs  wake_list.rs
eva-kernel/src/rt/pause/: cell.rs  mod.rs
eva-kernel/src/rt/sync/: condvar.rs  mod.rs  raw_condvar.rs  raw_mutex.rs
eva-kernel/src/scheduler/: mod.rs  panic.rs  sched.rs  thread.rs  time.rs
eva-kernel/src/scheduler/pause/: cell.rs  mod.rs
eva-kernel/src/scheduler/sync/: raw_mutex.rs
eva-kernel/src/utils/: assert.rs  bitset.rs  linked_list.rs  mod.rs  slot_map.rs  unchecked_ref.rs
eva-libc/: Cargo.toml  build.rs
eva-libc/src/: stub.c
eva-pac/: Cargo.toml  build.rs  gen.sh
eva-pac/defs/cortexm/: index.json
eva-pac/defs/cortexm/chips/: cm4.json  cm7.json
eva-pac/defs/cortexm/modules/: cm_regs.json  nvic.json  scb.json  syst.json
eva-pac/src/: lib.rs
eva-pac/src/cortexm/chips/: cm4.rs  cm7.rs
eva-pac/src/cortexm/modules/: cm_regs.rs  nvic.rs  scb.rs  syst.rs
eva-pac/src/stm32/: chips.rs  list.rs
eva-pac/src/stm32/chips/: stm32f401ce.rs  stm32f401rb.rs  stm32f401rc.rs  stm32f401vb.rs  stm32f401vd.rs  stm32f405rg.rs  stm32f405zg.rs  stm32f407ie.rs  stm32f407vg.rs  stm32f410rb.rs  stm32f410t8.rs  stm32f411rc.rs  stm32f411vc.rs  stm32f412ce.rs  stm32f412cg.rs  stm32f412re.rs  stm32f412ve.rs  stm32f412ze.rs  stm32f412zg.rs  stm32f413cg.rs  stm32f413ch.rs  stm32f413rg.rs  stm32f413vg.rs  stm32f413zg.rs  stm32f415og.rs  stm32f415rg.rs  stm32f415zg.rs  stm32f417ie.rs  stm32f417ve.rs  stm32f423ch.rs  stm32f423mh.rs  stm32f423zh.rs  stm32f427ag.rs  stm32f427ii.rs  stm32f427vg.rs  stm32f427vi.rs  stm32f427zg.rs  stm32f429ag.rs  stm32f429ie.rs  stm32f429ni.rs  (+75 more)
eva-pac/src/stm32/modules/: adc_v2.rs  adccommon_v2.rs  aes_f7.rs  aes_v1.rs  can_bxcan.rs  cec_v2.rs  crc_v1.rs  crc_v3.rs  cryp_v1.rs  cryp_v2.rs  dac_v2.rs  dbgmcu_f4.rs  dbgmcu_f7.rs  dcmi_v1.rs  dma2d_v1.rs  dma_v2.rs  dsihost_v1.rs  eth_v1b.rs  eth_v1c.rs  exti_v1.rs  flash_f4.rs  flash_f7.rs  fmc_v1x3.rs  fmc_v2x1.rs  fmpi2c_v2.rs  fsmc_v1x0.rs  fsmc_v1x3.rs  gpio_v2.rs  hash_v1.rs  hash_v2.rs  i2c_v1.rs  i2c_v2.rs  iwdg_v1.rs  iwdg_v2.rs  jpeg_v1.rs  lptim_v1a.rs  ltdc_v1.rs  mdios_v1.rs  otg_v1.rs  pwr_f4.rs  (+22 more)
eva-scheduler/: Cargo.toml
eva-scheduler/src/: lib.rs  linked_list.rs  mutex.rs  pause.rs  portability.rs  print.rs  prio.rs  priority.rs  raw_thread.rs  scheduler.rs  sync.rs  time.rs  wait_queue.rs
eva-scheduler/src/pause/: cell.rs  cs.rs  mod.rs
eva-scheduler/src/sync/: linked_list.rs  mod.rs  raw_mutex.rs
eva-scheduler/src/utils/: assert.rs  linked_list.rs  mod.rs
eva-utils/: Cargo.toml
eva-utils/src/: atomic_linked_list.rs  bitset.rs  lib.rs  linked_list.rs  singly_linked_list.rs  slot_map.rs  static_assert.rs  unchecked_ref.rs
examples/: set_default.sh
examples/.cargo/: config.linux.toml  config.stm32f767.toml  config.toml
examples/benches/bench-baseline/: Cargo.toml
examples/benches/bench-baseline/src/: main.rs
examples/benches/bench-condvar/: Cargo.toml
examples/benches/bench-condvar/src/: main.rs
examples/benches/bench-mutex/: Cargo.toml
examples/benches/bench-mutex/src/: main.rs
examples/benches/bench-yield/: Cargo.toml
examples/benches/bench-yield/src/: main.rs
examples/hello-world/: Cargo.toml
examples/hello-world-c/: Cargo.toml  build.rs
examples/hello-world-c-libc/: Cargo.toml  build.rs
examples/hello-world-c-libc/src/: main.c
examples/hello-world-c/src/: main.c  main.rs
examples/hello-world-cpp-libc/: Cargo.toml  build.rs
examples/hello-world-cpp-libc/src/: main.cpp  main.rs
examples/hello-world-std/: Cargo.toml
examples/hello-world-std/src/: main.rs
examples/hello-world/src/: main.rs
examples/sync-queue/: Cargo.toml  example.x
examples/sync-queue-c/: Cargo.toml  build.rs
examples/sync-queue-c/src/: main.c  main.rs
examples/sync-queue-std/: Cargo.toml
examples/sync-queue-std/src/: main.rs
examples/sync-queue/src/: main.rs
scripts/: diff_symbols.sh
