[workspace]
resolver = "3"
members = [
    "eva-pac",
    "eva-abi",
    "eva-kernel",
    "eva-utils",
    "eva-bsp/stm32f767",
    "eva-bsp/linux",
    "examples/hello-world",
    "examples/sync-queue",
    "examples/sync-queue-std",
    "examples/sync-queue-c",
    "examples/benches/bench-yield",
    "examples/benches/bench-baseline",
    "examples/benches/bench-mutex",
    "examples/benches/bench-condvar",
]

[workspace.dependencies]
eva-abi = { path = "eva-abi" }
eva-pac = { path = "eva-pac" }
eva-kernel = { path = "eva-kernel" }
eva-utils = { path = "eva-utils" }
eva-bsp-stm32f767 = { path = "eva-bsp/stm32f767" }
eva-bsp-linux = { path = "eva-bsp/linux" }

rtt-target = "0.6.1"
critical-section = "1.0.0"