[package]
name = "eva-abi"
version = "0.1.0"
edition = "2024"
authors = ["Davide Mor <tazdevil971@gmail.com>"]
license = "LGPL-3.0-or-later WITH LGPL-3.0-linking-exception"
links = "eva"

[dependencies]
# Required setup to build as part of rustc.
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }

[features]
rustc-dep-of-std = ["core"]