[package]
name = "eva-kernel"
version = "0.1.0"
edition = "2024"
authors = ["Davide Mor <tazdevil971@gmail.com>"]
license = "LGPL-3.0-or-later WITH LGPL-3.0-linking-exception"

[dependencies]
linked_list_allocator = { version = "0.10", default-features = false }
lock_api = "0.4"
rtt-target = { workspace = true }
critical-section = { workspace = true, features = ["restore-state-bool"] }