[package]
name = "eva-scheduler"
version = "0.1.0"
edition = "2024"
authors = ["Davide Mor <tazdevil971@gmail.com>"]

[dependencies]
eva-config = { workspace = true }
critical-section = { workspace = true }
lock_api = "0.4"
rtt-target = { workspace = true }

[build-dependencies]
eva-build = { workspace = true }