[package]
name = "eva-utils"
version = "0.1.0"
edition = "2024"
authors = ["Davide Mor <tazdevil971@gmail.com>"]
license = "LGPL-3.0-or-later WITH LGPL-3.0-linking-exception"

[dependencies]
num-traits = { version = "0.2", default-features = false }
bytemuck = { version = "1.24", default-features = false, features = ["derive"] }