[package]
name = "eva-bsp-linux"
version = "0.1.0"
edition = "2024"
authors = ["Davide Mor <tazdevil971@gmail.com>"]
license = "LGPL-3.0-or-later WITH LGPL-3.0-linking-exception"

[dependencies]
eva-kernel = { workspace = true }

linux-raw-sys = { git = "https://github.com/Tazdevil971/linux-raw-sys.git", features = ["general", "no_std"], default-features = false }