[package]
name = "eva-hello-world"
version = "0.1.0"
edition = "2024"
authors = ["Davide Mor <tazdevil971@gmail.com>"]

[dependencies]
eva-kernel = { workspace = true }
eva-abi = { workspace = true }

# Hack to not have to switch BSP target every time
[target.'cfg(target_arch = "x86_64")'.dependencies]
eva-bsp-linux = { workspace = true }

[target.'cfg(target_arch = "arm")'.dependencies]
eva-bsp-stm32f767 = { workspace = true }